--- a/package.json
+++ b/package.json
@@ -1,32 +1,20 @@
 {
-  "name": "react-webpack-babel-ts-tslint",
+  "name": "RescuePals",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/TSchaeken/react-webpack-babel-ts-tslint.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/TSchaeken/react-webpack-babel-ts-tslint/issues"
-  },
-  "homepage": "https://github.com/TSchaeken/react-webpack-babel-ts-tslint#readme",
+  "main": "webpack.config.js",
   "devDependencies": {
     "awesome-typescript-loader": "^5.2.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^1.0.0",
+    "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "node-fetch": "^2.2.0",
     "source-map-loader": "^0.2.3",
+    "style-loader": "^0.23.0",
     "tslint": "^5.11.0",
     "tslint-config-prettier": "^1.15.0",
     "tslint-react": "^3.6.0",
@@ -38,7 +26,27 @@
   "dependencies": {
     "@types/react": "^16.4.8",
     "@types/react-dom": "^16.0.7",
+    "@types/react-router": "^4.0.30",
+    "@types/react-router-dom": "^4.3.0",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2"
-  }
+    "react-dom": "^16.4.2",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --mode development --open --hot",
+    "build": "webpack --mode production"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/TSchaeken/RescuePals.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/TSchaeken/RescuePals/issues"
+  },
+  "homepage": "https://github.com/TSchaeken/RescuePals#readme"
 }
