--- a/package.json
+++ b/package.json
@@ -53,8 +53,9 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --mode development --open --hot",
-    "build": "webpack --mode production"
+    "dev": "webpack-dev-server --mode development --open --hot",
+    "build": "webpack --mode production",
+    "start": "npm run build && webpack-dev-server --open"
   },
   "repository": {
     "type": "git",
