--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@types/react": "^16.4.8",
     "@types/react-dom": "^16.0.7",
+    "@types/react-leaflet": "^1.1.6",
     "@types/react-router": "^4.0.30",
     "@types/react-router-dom": "^4.3.0",
     "awesome-typescript-loader": "^5.2.0",
@@ -37,9 +38,12 @@
     "express": "^4.16.3",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "leaflet": "^1.3.4",
     "node-fetch": "^2.2.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-google-maps": "^9.4.5",
+    "react-leaflet": "^2.0.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "source-map-loader": "^0.2.3",
